# OpenEnv-RL-Environment-for-AI-Customer-Support

./: .dockerignore  .gitignore  Dockerfile  README.md  inference.py  inference.py.save  openenv.yaml  pyproject.toml  pyproject.toml.save  pytest.ini  requirements.txt  run.sh  server.py
config/: __init__.py  config.py
core/: __init__.py  env.py  state_manager.py
domain/: __init__.py  models.py  schemas.py
logic/: __init__.py  graders.py  reward.py  tasks.py
server/: app.py
tests/: conftest.py  test_env.py  test_graders.py  test_tasks.py
utils/: __init__.py  scoring_utils.py  text_processing.py  validation_utils.py
